tests/error/result_errors/state_result_duplicates.err
Error: Copy violation (at $FILE:8:28)
  | 
6 | def main() -> None:
7 |     q1 = qubit()
8 |     state_result("tag", q1, q1)
  |                             ^^ Variable `q1` with non-copyable type `qubit` cannot be
  |                                borrowed ...
  | 
8 |     state_result("tag", q1, q1)
  |                         -- since it was already borrowed here

Guppy compilation failed due to 1 previous error
